# conandemo-libfoo

./: CMakeLists.txt  README.md
include/foo/: foo.h
